Fix: s-hero-about
Initial commit da página about, para a seção hero

--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
 
-
     <!-- style -->
     <link rel="stylesheet" href="./css/main.min.css">
 
-
-    <title>Gerson Marques • Product Designer</title>
+    <title>Gerson Marques - Product Designer</title>
 </head>
 
 <body>
@@ -29,7 +27,7 @@
             <nav>
                 <ul>
                     <li><a href="">Work</a></li>
-                    <li><a href="">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="">Resume</a></li>
                 </ul>
                 <a href="" class="btn-mobile"><img src="img/btn-mobile.svg" alt=""></a>
