FIx: ajustes nos links internos

--- a/about.html
+++ b/about.html
@@ -21,12 +21,12 @@
 <body>
     <header>
         <div class="container">
-            <a href="#" class="logo">
+            <a href="index.html" class="logo">
                 <img src="./img/logo.svg" alt="Logotipo Gesrson Marques">
             </a>
             <nav>
                 <ul>
-                    <li><a href="index.html">Work</a></li>
+                    <li><a href="index.html" rel="prev">Work</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="">Resume</a></li>
                 </ul>
