--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <nav>
                 <ul>
                     <li><a href="">Work</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="about.html" rel="next">About</a></li>
                     <li><a href="">Resume</a></li>
                 </ul>
                 <a href="" class="btn-mobile"><img src="img/btn-mobile.svg" alt=""></a>
