Fix: About-part s-hero-about

--- a/about.html
+++ b/about.html
@@ -37,20 +37,27 @@
 
     <section class="s-hero-about">
         <div class="container">
-            <div class="img-gerson">
-                <img src="img/img-about.png" alt="Foto de apresentação do Gerson Marques">
-            </div>
-            <div class="text-about">
-                <h3>Hey there, I'm Gerson! 👋🏽</h3>
-                <p>I started my career as a graphic designer when I was a teenager, soon after I started working with
-                    games and fell in love with product development, especially digital ones. Projects that require a
-                    high degree of vision, problem solving, knowledge of needs and visual polish are what drives me. In
-                    my design experience, I've found that bringing the user to the center of the process and
-                    collaborating closely with working partners and stakeholders during all phases results in a better
-                    product. I'm constantly looking for innovative ideas to deliver the best in terms of user
-                    interaction and experience. I also take the opportunity to be involved in different projects to
-                    learn, research and present ideas outside the box. I am a designer who loves to learn new skills and
-                    techniques daily in search of continuous evolution.</p>
+            <div class="info-about">
+                <div class="img-gerson">
+                    <img src="img/img-about.png" alt="Foto de apresentação do Gerson Marques">
+                </div>
+                <div class="text-about">
+                    <h3>Hey there, I'm Gerson! 👋🏽</h3>
+                    <p>I started my career as a graphic designer when I was a teenager, soon after I started working
+                        with
+                        games and fell in love with product development, especially digital ones. Projects that require
+                        a
+                        high degree of vision, problem solving, knowledge of needs and visual polish are what drives me.
+                        In
+                        my design experience, I've found that bringing the user to the center of the process and
+                        collaborating closely with working partners and stakeholders during all phases results in a
+                        better
+                        product. I'm constantly looking for innovative ideas to deliver the best in terms of user
+                        interaction and experience. I also take the opportunity to be involved in different projects to
+                        learn, research and present ideas outside the box. I am a designer who loves to learn new skills
+                        and
+                        techniques daily in search of continuous evolution.</p>
+                </div>
             </div>
         </div>
     </section>
