--- a/index.html
+++ b/index.html
@@ -39,7 +39,17 @@
         <div class="container">
             <div class="txt-hero">
                 <h3 class="txt-primary">Hello, I'm Gerson Marques</h3>
+
+                <!-- teste efeito text change -->
+                
                 <h3 class="txt-secondary">I am passionate about <span>Product</span> | design.</h3>
+                <ul class="option">
+                    <li><span>Product</span></li>
+                    <li><span>Gamer</span></li>
+                    <li><span>aaa</span></li>
+                    <li><span>bbb</span></li>
+                </ul>
+                
                 <p class="info-hero">Currently working on <span>@Capgemini</span>.</p>
             </div>
             <div class="btn-hero">
