Fix: ajuste text change s-hero
Ajustes no texto que fica alternando as informações solicitadas pelo projetista

--- a/index.html
+++ b/index.html
@@ -37,21 +37,37 @@
 
     <section class="s-hero">
         <div class="container">
-            <div class="txt-hero">
-                <h3 class="txt-primary">Hello, I'm Gerson Marques</h3>
 
-                <!-- teste efeito text change -->
-                
-                <h3 class="txt-secondary">I am passionate about <span>Product</span> | design.</h3>
+
+            <!-- <div class="txt-hero">                
+                <h3 class="txt-secondary">I am passionate about</h3>
                 <ul class="option">
-                    <li><span>Product</span></li>
+                    <li><span>olá</span></li>
                     <li><span>Gamer</span></li>
                     <li><span>aaa</span></li>
                     <li><span>bbb</span></li>
+                </ul>              
+            </div> -->
+
+
+
+            <!-- teste efeito text change -->
+
+            <div class="txt-hero">
+                <div class="txt-secondary">I am passionate about</div>
+                <ul class="option">
+                    <li><span>Product</span></li>
+                    <li><span>Gamer</span></li>
+                    <li><span>Developer</span></li>
+                    <li><span>Freelancer</span></li>
                 </ul>
-                
-                <p class="info-hero">Currently working on <span>@Capgemini</span>.</p>
             </div>
+
+
+
+
+
+
             <div class="btn-hero">
                 <a href="#" class="style-btn">Read more</a>
             </div>
