Fix: Ajustes texto digitado

--- a/index.html
+++ b/index.html
@@ -37,36 +37,26 @@
 
     <section class="s-hero">
         <div class="container">
-
-
-            <!-- <div class="txt-hero">                
-                <h3 class="txt-secondary">I am passionate about</h3>
-                <ul class="option">
-                    <li><span>olá</span></li>
-                    <li><span>Gamer</span></li>
-                    <li><span>aaa</span></li>
-                    <li><span>bbb</span></li>
-                </ul>              
-            </div> -->
-
-
-
-            <!-- teste efeito text change -->
-
             <div class="txt-hero">
-                <div class="txt-secondary">I am passionate about</div>
-                <ul class="option">
-                    <li><span>Product</span></li>
-                    <li><span>Gamer</span></li>
-                    <li><span>Developer</span></li>
-                    <li><span>Freelancer</span></li>
-                </ul>
+
+                <h3 class="txt-primary">Hello, I'm Gerson Marques</h3>
+                
+                <div class="txt-change">
+                <!-- efect text change -->
+                    <div class="txt-secondary"> <h3>I am passionate about</h3>
+                    <ul class="option">
+                        <li><span>Product</span></li>
+                        <li><span>Gamer</span></li>
+                        <li><span>Developer</span></li>
+                        <li><span>Freelancer</span></li>
+                    </ul>
+                    <div class="textFixed">
+                        <h3>design.</h3>
+                    </div>
+                </div>
+               
+                </div>
             </div>
-
-
-
-
-
 
             <div class="btn-hero">
                 <a href="#" class="style-btn">Read more</a>
