Fix: page about

--- a/about.html
+++ b/about.html
@@ -62,6 +62,73 @@
         </div>
     </section>
 
+    <section class="s-social">
+        <div class="container">
+        <div class="title-primary">
+            <h1>Let's work together?</h1>
+        </div>
+        <div class="title-secondary">
+            <h3>You can find me around here:</h3>
+            <div class="social-work">
+            <ul>
+                <li>
+                    <a href="#">
+                        <img src="./img/icon-email.svg" alt="">
+                        <span>gersonmks@gmail.com</span>
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">
+                        <img src="./img/icon-phone.svg" alt="">
+                        <span>+55 (83) 981143238</span>
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">
+                        <img src="./img/icon-dribbble.svg" alt="">
+                        <span>gersonmks</span>
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">
+                        <img src="./img/icon-linkedin.svg" alt="">
+                        <span>gersonmks</span>
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">
+                        <img src="./img/icon-behance.svg" alt="">
+                        <span>gersonmarques</span>
+                    </a>
+                </li>
+            </ul>
+
+        </div>
+            
+        </div>
+        
+    </div>
+    <div class="social-media">
+        <p>Here you can see what I like and who I share the best moments of my life with</p>
+        <ul>
+            <li>
+                <a href="">
+                    <img src="./img/icon-instagram.svg" alt="">
+                    <span>@gersonmks</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+    </section>
+
 </body>
 
 </html>
