Fix: ajustes finos s-social

--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="#">
+                    <a href="#" class="link-under">
                         <img src="./img/icon-dribbble.svg" alt="">
                         <span>gersonmks</span>
                     </a>
@@ -96,7 +96,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="#">
+                    <a href="#" class="link-under">
                         <img src="./img/icon-linkedin.svg" alt="">
                         <span>gersonmks</span>
                     </a>
@@ -104,7 +104,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="#">
+                    <a href="#" class="link-under">
                         <img src="./img/icon-behance.svg" alt="">
                         <span>gersonmarques</span>
                     </a>
