--- a/about.html
+++ b/about.html
@@ -72,24 +72,24 @@
             <div class="social-work">
             <ul>
                 <li>
-                    <a href="#">
-                        <img src="./img/icon-email.svg" alt="">
+                    <a href="mailto:gersonmks@gmail.com" target="_blank">
+                        <img src="./img/icon-email.svg" alt="Logo de um envelope">
                         <span>gersonmks@gmail.com</span>
                     </a>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <a href="#">
-                        <img src="./img/icon-phone.svg" alt="">
+                    <a href="tel:+5583981143238">
+                        <img src="./img/icon-phone.svg" alt="Logo de um telefone">
                         <span>+55 (83) 981143238</span>
                     </a>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <a href="#" class="link-under">
-                        <img src="./img/icon-dribbble.svg" alt="">
+                    <a href="https://dribbble.com/gersonmks" target="_blank" class="link-under">
+                        <img src="./img/icon-dribbble.svg" alt="Logo do Dribbble">
                         <span>gersonmks</span>
                     </a>
                 </li>
@@ -97,15 +97,15 @@
             <ul>
                 <li>
                     <a href="#" class="link-under">
-                        <img src="./img/icon-linkedin.svg" alt="">
+                        <img src="./img/icon-linkedin.svg" alt="Logo do Linkedin">
                         <span>gersonmks</span>
                     </a>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <a href="#" class="link-under">
-                        <img src="./img/icon-behance.svg" alt="">
+                    <a href="https://www.behance.net/gersonmarques?tracking_source=search_users%7Cgerson%20marques" target="_blank" class="link-under">
+                        <img src="./img/icon-behance.svg" alt="Logo do Behance">
                         <span>gersonmarques</span>
                     </a>
                 </li>
@@ -120,8 +120,8 @@
         <p>Here you can see what I like and who I share the best moments of my life with</p>
         <ul>
             <li>
-                <a href="">
-                    <img src="./img/icon-instagram.svg" alt="">
+                <a href="https://www.instagram.com/gersonmks/" target="_blank">
+                    <img src="./img/icon-instagram.svg" alt="Logo do instagram">
                     <span>@gersonmks</span>
                 </a>
             </li>
