Fix: ajustes em links - criação de página
Ajustes nos links da página about e criação da página resume

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                 <ul>
                     <li><a href="index.html" rel="prev">Work</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="">Resume</a></li>
+                    <li><a href="resume.html" rel="next">Resume</a></li>
                 </ul>
                 <a href="" class="btn-mobile"><img src="img/btn-mobile.svg" alt=""></a>
             </nav>
@@ -72,7 +72,7 @@
             <div class="social-work">
             <ul>
                 <li>
-                    <a href="mailto:gersonmks@gmail.com" target="_blank">
+                    <a href="mailto:gersonmks@gmail.com" target="_blank" rel="external">
                         <img src="./img/icon-email.svg" alt="Logo de um envelope">
                         <span>gersonmks@gmail.com</span>
                     </a>
@@ -88,7 +88,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="https://dribbble.com/gersonmks" target="_blank" class="link-under">
+                    <a href="https://dribbble.com/gersonmks" target="_blank" rel="external" class="link-under">
                         <img src="./img/icon-dribbble.svg" alt="Logo do Dribbble">
                         <span>gersonmks</span>
                     </a>
@@ -104,7 +104,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="https://www.behance.net/gersonmarques?tracking_source=search_users%7Cgerson%20marques" target="_blank" class="link-under">
+                    <a href="https://www.behance.net/gersonmarques?tracking_source=search_users%7Cgerson%20marques" target="_blank" rel="external" class="link-under">
                         <img src="./img/icon-behance.svg" alt="Logo do Behance">
                         <span>gersonmarques</span>
                     </a>
@@ -120,7 +120,7 @@
         <p>Here you can see what I like and who I share the best moments of my life with</p>
         <ul>
             <li>
-                <a href="https://www.instagram.com/gersonmks/" target="_blank">
+                <a href="https://www.instagram.com/gersonmks/" target="_blank" rel="external">
                     <img src="./img/icon-instagram.svg" alt="Logo do instagram">
                     <span>@gersonmks</span>
                 </a>
