--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             </a>
             <nav>
                 <ul>
-                    <li><a href="">Work</a></li>
+                    <li><a href="index.html">Work</a></li>
                     <li><a href="about.html" rel="next">About</a></li>
-                    <li><a href="">Resume</a></li>
+                    <li><a href="resume.html" rel="next">Resume</a></li>
                 </ul>
                 <a href="" class="btn-mobile"><img src="img/btn-mobile.svg" alt=""></a>
             </nav>
