--- a/resume.html
+++ b/resume.html
@@ -34,3 +34,43 @@
             </nav>
         </div>
     </header>
+
+    <section class="s-resume">
+        <div class="title-resume">
+            <div class="name-resume">
+                <h3>GERSON MARQUES</h3>
+            </div>
+            <div class="contact-resume">
+                <ul>
+                    <li>
+                        <a href="">
+                            <img src="/img/icon-email.svg" alt="Ícone de um envelope">
+                            <span>gersonmks@gmail.com</span>
+                        </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="">
+                            <img src="/img/icon-phone.svg" alt="Ícone de um telefone">
+                            <span>+55 (83) 98114 3238</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="info-resume">
+            <div class="education">
+                <div class="title-info">
+                    <h3>EDUCATION 🎓</h3>
+                </div>
+                <div class="courses">
+                    <div class="sub-title">
+                        <h4>UNIFACISA</h4>
+                    </div>
+                    <p>2011 - 2014</p>
+                    <p>Graduate in Digital Games</p>
+                </div>
+            </div>
+        </div>
+    </section>
