Fix: s-resume (title and courses)

--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
     <!-- style -->
     <link rel="stylesheet" href="./css/main.min.css">
 
-    <title>About - Gerson Marques</title>
+    <title>Resume - Gerson Marques</title>
 </head>
 
 <body>
@@ -36,40 +36,60 @@
     </header>
 
     <section class="s-resume">
-        <div class="title-resume">
-            <div class="name-resume">
-                <h3>GERSON MARQUES</h3>
-            </div>
-            <div class="contact-resume">
-                <ul>
-                    <li>
-                        <a href="">
-                            <img src="/img/icon-email.svg" alt="Ícone de um envelope">
-                            <span>gersonmks@gmail.com</span>
-                        </a>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <a href="">
-                            <img src="/img/icon-phone.svg" alt="Ícone de um telefone">
-                            <span>+55 (83) 98114 3238</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="info-resume">
-            <div class="education">
-                <div class="title-info">
-                    <h3>EDUCATION 🎓</h3>
+        <div class="container">
+            <div class="title-resume">
+                <div class="name-resume">
+                    <h3>GERSON MARQUES</h3>
                 </div>
-                <div class="courses">
-                    <div class="sub-title">
-                        <h4>UNIFACISA</h4>
+                <div class="contact-resume">
+                    <ul>
+                        <li>
+                            <a href="">
+                                <img src="/img/icon-email.svg" alt="Ícone de um envelope">
+                                <span>gersonmks@gmail.com</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <a href="">
+                                <img src="/img/icon-phone.svg" alt="Ícone de um telefone">
+                                <span>+55 (83) 98114 3238</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="info-resume">
+                <div class="education">
+                    <div class="title-info">
+                        <h3>EDUCATION 🎓</h3>
                     </div>
-                    <p>2011 - 2014</p>
-                    <p>Graduate in Digital Games</p>
+                    <div class="sub-title-info">
+                        <h4>UNIFACISA</h4>
+                        <span>2011 - 2014</span>
+                        <p>Graduate in Digital Games</p>
+                    </div>
+                    <div class="sub-title-info">
+                        <h4>ESTÁCIO</h4>
+                        <span>2017 - 2018</span>
+                        <p>Post graduate in Mobile Development</p>
+                    </div>
+                    <div class="sub-title-info">
+                        <h4>GOOGLE CERTIFICATE</h4>
+                        <span>2021</span>
+                        <p>Google UX Certification - Coursera</p>
+                    </div>
+                    <div class="sub-title-info">
+                        <h4>DESIGN CIRCUIT</h4>
+                        <span>2020</span>
+                        <p>Course - UX Design</p>
+                    </div>
+                    <div class="sub-title-info">
+                        <h4>UI BOOST</h4>
+                        <span>2020</span>
+                        <p>Course - UI Design</p>
+                    </div>
                 </div>
             </div>
         </div>
