--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="#" class="link-under">
+                    <a href="https://linkedin.com/in/gersonmks" target="_blank" rel="external" class="link-under">
                         <img src="./img/icon-linkedin.svg" alt="Logo do Linkedin">
                         <span>gersonmks</span>
                     </a>
