--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@
                 <div class="contact-resume">
                     <ul>
                         <li>
-                            <a href="">
+                            <a href="mailto:gersonmks@gmail.com" target="_blank" rel="external">
                                 <img src="/img/icon-email.svg" alt="Ícone de um envelope">
                                 <span>gersonmks@gmail.com</span>
                             </a>
@@ -52,7 +52,7 @@
                     </ul>
                     <ul>
                         <li>
-                            <a href="">
+                            <a href="tel:+5583981143238">
                                 <img src="/img/icon-phone.svg" alt="Ícone de um telefone">
                                 <span>+55 (83) 98114 3238</span>
                             </a>
@@ -61,34 +61,57 @@
                 </div>
             </div>
             <div class="info-resume">
-                <div class="education">
-                    <div class="title-info">
-                        <h3>EDUCATION 🎓</h3>
+                <div class="details">
+                    <div class="education">
+                        <div class="title-info">
+                            <h3>EDUCATION 🎓</h3>
+                        </div>
+                        <div class="sub-title-info">
+                            <h4>UNIFACISA</h4>
+                            <span>2011 - 2014</span>
+                            <p>Graduate in <br>Digital Games</p>
+                        </div>
+                        <div class="sub-title-info">
+                            <h4>ESTÁCIO</h4>
+                            <span>2017 - 2018</span>
+                            <p>Post graduate in <br>Mobile Development</p>
+                        </div>
+                        <div class="sub-title-info">
+                            <h4>GOOGLE CERTIFICATE</h4>
+                            <span>2021</span>
+                            <p>Google UX <br>Certification - <br>Coursera</p>
+                        </div>
+                        <div class="sub-title-info">
+                            <h4>DESIGN CIRCUIT</h4>
+                            <span>2020</span>
+                            <p>Course - UX Design</p>
+                        </div>
+                        <div class="sub-title-info">
+                            <h4>UI BOOST</h4>
+                            <span>2020</span>
+                            <p>Course - UI Design</p>
+                        </div>
                     </div>
-                    <div class="sub-title-info">
-                        <h4>UNIFACISA</h4>
-                        <span>2011 - 2014</span>
-                        <p>Graduate in Digital Games</p>
-                    </div>
-                    <div class="sub-title-info">
-                        <h4>ESTÁCIO</h4>
-                        <span>2017 - 2018</span>
-                        <p>Post graduate in Mobile Development</p>
-                    </div>
-                    <div class="sub-title-info">
-                        <h4>GOOGLE CERTIFICATE</h4>
-                        <span>2021</span>
-                        <p>Google UX Certification - Coursera</p>
-                    </div>
-                    <div class="sub-title-info">
-                        <h4>DESIGN CIRCUIT</h4>
-                        <span>2020</span>
-                        <p>Course - UX Design</p>
-                    </div>
-                    <div class="sub-title-info">
-                        <h4>UI BOOST</h4>
-                        <span>2020</span>
-                        <p>Course - UI Design</p>
+                    <div class="contact-details">
+                        <div class="title-info">
+                            <h3>CONTACT 📱</h3>
+                        </div>
+                        <div class="sub-title-info">
+                            <h4>MOBILE</h4>
+                            <p>+55 83 98114 3238</p>
+                        </div>
+                        <div class="sub-title-info">
+                            <h4>EMAIL</h4>
+                            <p>gersonmks@gmail.com</p>
+                        </div>
+                        <div class="sub-title-info">
+                            <h4>LINKEDIN</h4>
+                            <p>linkedin.com/in/gersonmks</p>
+                        </div>
+                        <div class="sub-title-info">
+                            <h4>INSTAGRAM</h4>
+                            <p>@gersonmks</p>
+                        </div>
                     </div>
                 </div>
             </div>
