--- a/resume.html
+++ b/resume.html
@@ -52,7 +52,7 @@
                     </ul>
                     <ul>
                         <li>
-                            <a href="tel:+5583981143238">
+                            <a href="tel:+5583981143238" target="_blank" rel="external">
                                 <img src="/img/icon-phone.svg" alt="Ícone de um telefone">
                                 <span>+55 (83) 98114 3238</span>
                             </a>
@@ -98,19 +98,19 @@
                         </div>
                         <div class="sub-title-info">
                             <h4>MOBILE</h4>
-                            <p>+55 83 98114 3238</p>
+                            <a href="tel:+5583981143238" target="_blank" rel="external"><p>+55 83 98114 3238</p></a>
                         </div>
                         <div class="sub-title-info">
                             <h4>EMAIL</h4>
-                            <p>gersonmks@gmail.com</p>
+                            <a href="mailto:gersonmks@gmail.com" target="_blank" rel="external"><p>gersonmks@gmail.com</p></a>
                         </div>
                         <div class="sub-title-info">
                             <h4>LINKEDIN</h4>
-                            <p>linkedin.com/in/gersonmks</p>
+                            <a href="https://linkedin.com/in/gersonmks" target="_blank" rel="external"> <p>gersonmks</p> </a>
                         </div>
                         <div class="sub-title-info">
                             <h4>INSTAGRAM</h4>
-                            <p>@gersonmks</p>
+                            <a href="https://www.instagram.com/gersonmks/" target="_blank" rel="external"> <p>@gersonmks</p> </a>
                         </div>
                     </div>
                 </div>
